fix: coloco gap a 0px

--- a/public/css/partials/header.css
+++ b/public/css/partials/header.css
@@ -64,7 +64,7 @@
 
   .navContainer ul {
     display: flex;
-    gap: 20px;
+    gap: 0px;
     text-align: center;
     position: unset;
     width: 100%;
